# book_store_fastapi

./: .gitignore  app.py  bookstore.db  database.py  main.py  pyproject.toml
src/: models.py  types.py
src/auth/: dependencies.py  models.py  security.py  tasks.py
src/books/: models.py  tasks.py
src/orders/: tasks.py
